Logo and offerings

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Epitome</title>
+    <title>timonjagi</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -45,7 +45,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <img src="./images/logo.png" alt="">
             </a>
         </div>
 
@@ -115,12 +115,9 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    Nulla aspernatur nam et accusantium. Tempore delectus dignissimos aut
-                    ab commodi. Labore et cupiditate temporibus odio debitis eaque. 
-                    Officia provident aut iste et dicta perferendis. Velit iure adipisci. 
-                    Molestiae qui fuga rerum facilis.
+                       I am an experienced full-stack Web Developer with a demonstrated history of working in the internet industry. Skilled in HTML, CSS, JavaScript, Ionic, Angular, Node, Express, and NoSQL Databases.
                     </p>
-                    <p>
+                    <!-- <p>
                     Reprehenderit quia id facilis nihil odit perferendis fugiat quidem voluptas. 
                     Non ratione tenetur. Quis earum quia deleniti fugit fugiat minus omnis. 
                     Iure dolore dolorum. Aspernatur quos cumque ea dolorum nemo nihil 
@@ -144,7 +141,7 @@
                     qui aut et eum. Aspernatur quos cumque ea dolorum nemo nihil 
                     beatae magnam. Qui molestiae rem. Aspernatur quos cumque ea dolorum 
                     nemo nihil. Qui molestiae rem.
-                    </p>
+                    </p> -->
                 </div>
             </div>
     
@@ -179,38 +176,38 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2018 - Present</p>
-                                <h3 class="item-title">Awesome Studio</h3>
-                                <h5>Lead Designer</h5>
+                                <p class="timeline__timeframe">Feb 2021 - Present</p>
+                                <h3 class="item-title">Bingwa Services</h3>
+                                <h5>Frontend Engineer</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Joined the development team as a full-stack developer. Tech stack: MongoDB, Angular, NodeJs , Express, Loopback, and Ionic</p>
                             </div>
                         </div>
 
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2017 - June 2018</p>
-                                <h3 class="item-title">Super Cool Agency</h3>
-                                <h5>Frontend Developer</h5>
+                                <p class="timeline__timeframe">Jan 2017 - Dec 2020</p>
+                                <h3 class="item-title">Freelance</h3>
+                                <h5>Web Designer & Developer</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>Designed and developed websites, web portals and apps for a number of clients including the Coffee Board of Kenya, tech companies and independent small businesses</p>
                             </div>
                         </div>
 
-                        <div class="timeline__block">
+                        <!-- <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">March 2016 - June 2017</p>
-                                <h3 class="item-title">Epic Design Studio</h3>
-                                <h5>Frontend Developer</h5>
+                                <p class="timeline__timeframe">Jan 2016 - Present</p>
+                                <h3 class="item-title">PlayMaker Sound Studios</h3>
+                                <h5>Music Producer</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p></p>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -226,15 +223,15 @@
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
                                 <p class="timeline__timeframe">July 2011 - June 2015</p>
-                                <h3 class="item-title">University of Life</h3>
-                                <h5>Master Degree</h5>
+                                <h3 class="item-title">Kenyatta University</h3>
+                                <h5>Bachelor of Science, Computer Science</h5>
                             </div>
                             <div class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
                             </div>
                         </div>
 
-                        <div class="timeline__block">
+                        <!-- <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
                                 <p class="timeline__timeframe">July 2009 - June 2011</p>
@@ -244,14 +241,14 @@
                             <div class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2005 - June 2009</p>
-                                <h3 class="item-title">School of Hard Knocks</h3>
-                                <h5>Bachelor Degree</h5>
+                                <p class="timeline__timeframe">Jan 2006 - June 2009</p>
+                                <h3 class="item-title">Lenana School</h3>
+                                <h5>Kenya Certificate of Secondary Education</h5>
                             </div>
                             <div class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -289,10 +286,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Brand Identity</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
+                        I create a brand that reflects who you are and what your organization is all about. I'll help you define your brand's values, mission, and goals in a way that's relevant to your target audience
                 </div>
             </div>
 
@@ -300,9 +294,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Illustration</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        I create original illustrations that tell stories. From character profiles to product designs, I can help you understand the narrative of your product or service
                     </p>
                 </div>
             </div>
@@ -311,9 +303,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Web Design</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        We create websites that are beautiful, easy-to-navigate, and intuitive for users of all skill levels
                     </p>
                 </div>
             </div>
@@ -322,9 +312,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Product Strategy</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        I help companies develop products that meet their goals with a focus on user experience
                     </p>
                 </div>
             </div>
@@ -333,9 +321,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">UI/UX Design</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        I help companies design user interfaces and user experience designs that make sure users get what they need from the website or app
                     </p>
                 </div>
             </div>
@@ -344,9 +330,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Mobile Design</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        I help companies design an app UI/UX that makes your product stand out from competitors' offerings
                     </p>
                 </div>
             </div>
@@ -354,33 +338,6 @@
         </div> <!-- end services-list -->
 
     </section> <!-- end s-services -->
-
-
-    <!-- CTA
-    ================================================== -->
-    <section class="s-cta ss-dark">
-
-        <div class="row heading-block heading-block--center" data-aos="fade-up">
-            <div class="column large-full">
-                <h2 class="section-desc">
-                    Need a great reliable web hosting?
-                </h2>
-            </div>
-        </div> <!-- end heading-block -->
-
-        <div class="row cta-content" data-aos="fade-up">
-            <div class="column large-full">
-                <p>
-                We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                Powerful web and Wordpress hosting. Guaranteed.
-                Starting at $2.95 per month.
-                </p>
-
-                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn full-width">Get Started</a>
-            </div>
-        </div> <!-- end ad-content -->
-
-    </section> <!-- end s-cta -->
 
 
     <!-- works
