--- a/index.html
+++ b/index.html
@@ -398,40 +398,7 @@
         <div class="masonry">
           <div class="grid-sizer"></div>
 
-          <div class="masonry__brick" data-aos="fade-up">
-            <div class="item-folio">
-              <div class="item-folio__thumb">
-                <a
-                  href="images/portfolio/the-knot.png"
-                  class="thumb-link"
-                  title="Shutterbug"
-                  data-size="1050x700"
-                >
-                  <img src="images/portfolio/the-knot.png" alt="" />
-                </a>
-                <a
-                  href="https://www.theknot.co.ke/"
-                  class="item-folio__project-link"
-                  title="The Knot"
-                  target="_blank"
-                ></a>
-              </div>
-
-              <div class="item-folio__text">
-                <h4 class="item-folio__title">The Knot</h4>
-                <p class="item-folio__cat">Design & Development</p>
-              </div>
-
-              <div class="item-folio__caption">
-                <p>
-                  THe client is a bridal and wedding planning company who wanted
-                  an elegant online presence to complement their exisiting
-                  ground experience in the sector.
-                </p>
-              </div>
-            </div>
-          </div>
-          <!-- end masonry__brick -->
+      d masonry__brick -->
 
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
@@ -465,7 +432,40 @@
             </div>
           </div>
           <!-- end masonry__brick -->
+          <div class="masonry__brick" data-aos="fade-up">
+            <div class="item-folio">
+              <div class="item-folio__thumb">
+                <a
+                  href="images/portfolio/the-knot.png"
+                  class="thumb-link"
+                  title="Shutterbug"
+                  data-size="1050x700"
+                >
+                  <img src="images/portfolio/the-knot.png" alt="" />
+                </a>
+                <a
+                  href="https://www.theknot.co.ke/"
+                  class="item-folio__project-link"
+                  title="The Knot"
+                  target="_blank"
+                ></a>
+              </div>
 
+              <div class="item-folio__text">
+                <h4 class="item-folio__title">The Knot</h4>
+                <p class="item-folio__cat">Design & Development</p>
+              </div>
+
+              <div class="item-folio__caption">
+                <p>
+                  THe client is a bridal and wedding planning company who wanted
+                  an elegant online presence to complement their exisiting
+                  ground experience in the sector.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- en
           <!-- <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                             
