Remove illustrations from list of services

--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
                 </div>
                 <div class="timeline__desc">
                   <p>
-                    Completed my Bachelors with a Second Class (Upper division) Honours having specialized in Artificial Intelligence
+                    Completed my Bachelors with a Second Class (Upper division)
+                    Honours having specialized in Artificial Intelligence
                   </p>
                 </div>
               </div>
@@ -268,9 +269,7 @@
                   <h5>Kenya Certificate of Secondary Education</h5>
                 </div>
                 <div class="timeline__desc">
-                  <p>
-                    Member of Junior Achievement and Music Clubs.
-                  </p>
+                  <p>Member of Junior Achievement and Music Clubs.</p>
                 </div>
               </div>
             </div>
@@ -316,17 +315,6 @@
 
         <div class="column item-service" data-aos="fade-up">
           <div class="item-service__content">
-            <h4 class="item-title">Illustration</h4>
-            <p>
-              I create original illustrations that tell stories. From character
-              profiles to product designs, I can help you understand the
-              narrative of your product or service
-            </p>
-          </div>
-        </div>
-
-        <div class="column item-service" data-aos="fade-up">
-          <div class="item-service__content">
             <h4 class="item-title">Web Design</h4>
             <p>
               I create websites that are beautiful, easy-to-navigate, and
@@ -366,6 +354,17 @@
           </div>
         </div>
       </div>
+
+      <!-- <div class="column item-service" data-aos="fade-up">
+        <div class="item-service__content">
+          <h4 class="item-title">Illustration</h4>
+          <p>
+            I create original illustrations that tell stories. From character
+            profiles to product designs, I can help you understand the narrative
+            of your product or service
+          </p>
+        </div>
+      </div> -->
       <!-- end services-list -->
     </section>
     <!-- end s-services -->
@@ -457,7 +456,7 @@
               </div>
             </div>
           </div>
-<!-- 
+          <!-- 
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
