--- a/index.html
+++ b/index.html
@@ -65,20 +65,24 @@
         </ul>
 
         <ul class="header-social">
-          <li>
+          <!-- <li>
             <a href="#0"
               ><i class="fab fa-facebook-f" aria-hidden="true"></i
             ></a>
+          </li> -->
+          <li>
+            <a href="https://linkedin.com/in/timothy-njagi"
+              ><i class="fab fa-linkedin" aria-hidden="true"></i
+            ></a>
           </li>
           <li>
-            <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://github.com/timonjagi"
+              ><i class="fab fa-github" aria-hidden="true"></i
+            ></a>
           </li>
-          <li>
-            <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-          </li>
-          <li>
+          <!-- <li>
             <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-          </li>
+          </li> -->
         </ul>
       </nav>
 
@@ -389,13 +393,11 @@
         <div class="masonry">
           <div class="grid-sizer"></div>
 
-          d masonry__brick -->
-
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
                 <a
-                  href="images/portfolio/bingwa.jpg"
+                  href="#"
                   class="thumb-link"
                   title="Bingwa Services"
                   data-size="1050x700"
@@ -423,13 +425,82 @@
             </div>
           </div>
           <!-- end masonry__brick -->
+
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
                 <a
-                  href="images/portfolio/the-knot.png"
+                  href="#"
                   class="thumb-link"
-                  title="Shutterbug"
+                  title="Thriving Supermama"
+                  data-size="1050x700"
+                >
+                  <img
+                    src="images/portfolio/thriving.png"
+                    alt="Thriving Supermama"
+                  />
+                </a>
+                <a
+                  href="https://www.thrivingsupermama.com/"
+                  class="item-folio__project-link"
+                  title="Project link"
+                  target="_blank"
+                ></a>
+              </div>
+              <div class="item-folio__text">
+                <h4 class="item-folio__title">Thriving Supermama</h4>
+                <p class="item-folio__cat">Web Design & Development</p>
+              </div>
+              <div class="item-folio__caption">
+                <p>
+                  hriving Super Mama is a platform ideal for the millennial mom.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="masonry__brick" data-aos="fade-up">
+            <div class="item-folio">
+              <div class="item-folio__thumb">
+                <a
+                  href="#"
+                  class="thumb-link"
+                  title="Grow Green"
+                  data-size="1050x700"
+                >
+                  <img
+                    src="images/portfolio/present-fatherhood.png"
+                    alt="Present Fatherhood"
+                  />
+                </a>
+                <a
+                  href="https://www.presentfatherhood.org/"
+                  class="item-folio__project-link"
+                  title="Project link"
+                  target="_blank"
+                ></a>
+              </div>
+              <div class="item-folio__text">
+                <h4 class="item-folio__title">Present Fatherhood</h4>
+                <p class="item-folio__cat">Web Design & Development</p>
+              </div>
+              <div class="item-folio__caption">
+                <p>
+                  Present Fatherhood is a platform for young fathers with a
+                  quest for hands on parenting that is based on evidence &
+                  insights from top parenting experts
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="masonry__brick" data-aos="fade-up">
+            <div class="item-folio">
+              <div class="item-folio__thumb">
+                <a
+                  href="#"
+                  class="thumb-link"
+                  title="The Knot"
                   data-size="1050x700"
                 >
                   <img src="images/portfolio/the-knot.png" alt="" />
@@ -457,78 +528,6 @@
             </div>
           </div>
           <!-- 
-          <div class="masonry__brick" data-aos="fade-up">
-            <div class="item-folio">
-              <div class="item-folio__thumb">
-                <a
-                  href="images/portfolio/gallery/g-beetle.jpg"
-                  class="thumb-link"
-                  title="Thriving Supermama"
-                  data-size="1050x700"
-                >
-                  <img
-                    src="images/portfolio/the-beetle.jpg"
-                    
-                    alt=""
-                  />
-                </a>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                  target="_blank"
-                ></a>
-              </div>
-              <div class="item-folio__text">
-                <h4 class="item-folio__title">Thriving Supermama</h4>
-                <p class="item-folio__cat">Web Design & Development</p>
-              </div>
-              <div class="item-folio__caption">
-                <p>
-                
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="masonry__brick" data-aos="fade-up">
-            <div class="item-folio">
-              <div class="item-folio__thumb">
-                <a
-                  href="images/portfolio/gallery/g-shutterbug.jpg"
-                  class="thumb-link"
-                  title="Grow Green"
-                  data-size="1050x700"
-                >
-                  <img
-                    src="images/portfolio/shutterbug.jpg"
-                    srcset="
-                      images/portfolio/shutterbug.jpg    1x,
-                      images/portfolio/shutterbug@2x.jpg 2x
-                    "
-                    alt=""
-                  />
-                </a>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                  target="_blank"
-                ></a>
-              </div>
-              <div class="item-folio__text">
-                <h4 class="item-folio__title">Shutterbug</h4>
-                <p class="item-folio__cat">Branding</p>
-              </div>
-              <div class="item-folio__caption">
-                <p>
-                  Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                  Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                </p>
-              </div>
-            </div>
-          </div>
-
           <div class="masonry__brick" data-aos="fade-up">
             <div class="item-folio">
               <div class="item-folio__thumb">
@@ -732,10 +731,10 @@
       <div class="row">
         <div class="column large-full ss-copyright">
           <span>© Copyright Timothy Njagi 2022</span>
-          <span
+          <!-- <span
             >Design by
             <a href="https://www.styleshout.com/">StyleShout</a></span
-          >
+          > -->
         </div>
 
         <div class="ss-go-top">
